--- a/css/buttons.css
+++ b/css/buttons.css
@@ -25,6 +25,12 @@
     padding: 18px;
 }
 
+.button--subscribe {
+    width: 72px;
+    height: 72px;
+    padding: 28px;
+}
+
 /* Button more */
 
 .button-more {
