--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -211,6 +211,28 @@ body {
     width: 20px;
 }
 
+.nav__list_form {
+    display: flex;
+    justify-content: space-between;
+    margin-left: 30px;
+    margin-right: 250px;
+}
+
+.rectangle {
+    position: relative;
+    top: 15px;
+    height: 10px;
+    background-color: #7B61FF;
+}
+
+.nav__list__item__link {
+    font-weight: 600;
+}
+
+.nav__list__item__link:hover {
+    opacity: 0.7;
+}
+
 /* Main */
 
 .title-1 {
